syntax = "proto3";

package pb;

option go_package = "micro/pb";

message MergeListRequest {
    List list1 = 1;
    List list2 = 2;
}

message MergeListResponse {
    List merged = 1;
}

message List {
    repeated int32 v = 1;
}

service MergeLists {
    rpc Merge(MergeListRequest) returns (MergeListResponse);
}
